@@ -195,6 +195,9 @@ public:
 	CString						m_sURL;				///< the URL of the target or "(multiple targets)"
 
 	SVNRev						m_HeadRev;			///< the HEAD revision of the repository if bUpdate was TRUE
+
+	CString						m_sUUID;			///< the UUID of the associated repository
+
 	DECLARE_MESSAGE_MAP()
 
 private:
